--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -28,6 +28,8 @@ set ideajoin
 map <leader>l <Action>(ReformatCode)
 map <leader>rn <Action>(RenameElement)
 map <leader>k <Action>(ShowErrorDescription)
+map <C-o> <Action>(Back)
+map <C-i> <Action>(Forward)
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
 "" Map \r to the Reformat Code action
 "map \r <Action>(ReformatCode)
@@ -37,8 +39,10 @@ map <leader>k <Action>(ShowErrorDescription)
 
 "" Map \b to toggle the breakpoint on the current line
 "map \b <Action>(ToggleLineBreakpoint)
-map <leader>e <Action>(RecentFiles)
-map <leader>n <Action>(GotoClass)
+map <leader>fr <Action>(RecentFiles)
+map <leader>fu <Action>(FindUsages)
+map <leader>fn <Action>(GotoClass)
+map <leader>ff <Action>(GotoFile)
 
 vnoremap > >gv
 vnoremap < <gv
