--- a/touchcursor/.config/touchcursor/touchcursor.conf
+++ b/touchcursor/.config/touchcursor/touchcursor.conf
@@ -9,44 +9,16 @@
 # If there are multiple devices with the same name, you may add :# to the line (ex: Name="Your Keyboard":2)
 [Device]
 Name="AT Translated Set 2 keyboard"
+#Name="SEM USB Keyboard"
 
-# Remapping a key in both '[Remap]' and '[Bindings]' tables has a following format:
-# KEY_1=KEY_2
-# where KEY_1 is the key which is being remapped (the original key) and KEY_2 is the key KEY_1 will be remapped to.
-#
-# For usable key names, see: https://github.com/torvalds/linux/blob/master/include/uapi/linux/input-event-codes.h
-
-# Permanent remappings.
-# Allows to set permanent remappings when running the service without a need to hold a hyper key pressed.
-# Each remapping will be active permanently when the service is running.
-#
-# The permamently remapped key can be remapped differently while holding the hyper key pressed in table `[Bindings]` with the original key name.
-# For example, key 't' will output 'm' when you are not holding the hyper key pressed and key 'd' when holding the hyper key pressed:
-# [Remap]
-# KEY_T=KEY_M
-# [Bindings]
-# KEY_T=KEY_D
-#
-# You can swap the functionality of two keys as follows:
-# [Remap]
-# KEY_T=KEY_M
-# KEY_M=KEY_T
-[Remap]
-KEY_CAPSLOCK=KEY_ESC
-
-# Hyper key.
-# Allows to set a hyper key to activate remappings in the table '[Bindings]' when holding the hyper key pressed.
+# Hyper key
 [Hyper]
 HYPER1=KEY_SPACE
 
-# Hyper key bindings.
-# The following bindings remap keys only when holding a hyper key pressed.
-#
-# For example, when holding the hyper key pressed, key 't' would output key 'k':
-# [Bindings]
-# KEY_T=KEY_K
+# KEY_1=KEY_2
+# https://github.com/torvalds/linux/blob/master/include/uapi/linux/input-event-codes.h
 [Bindings]
-# Default bindings for IJKLHNUOMPY.
+# Default bindings for IJKLHNUOMPY
 KEY_I=KEY_PAGEUP
 KEY_J=KEY_DOWN
 KEY_K=KEY_UP
