Add tmux binding for chaning base path

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,3 +6,7 @@ set -g base-index 1
 set-window-option -g mode-keys vi
 set -g history-limit 10000
 
+# open a new window in the current directory
+bind C new-window -c "#{pane_current_path}"
+# set default directory for new windows in this session to current directory:
+bind M-c attach-session -c "#{pane_current_path}"
